crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__force_delay__cold_branch.snap
---
source: crates/nash-codegen/src/optimizer_tests/force_delay.rs
assertion_line: 23
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool false of
  True -> force (delay (trace "selected" in 42))
  False -> 0
--- unoptimized UPLC
(program 1.1.0
  (case
    (con bool False)
    (con integer 0)
    (force
      (delay
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))])))))
--- optimized Core
0
--- optimized UPLC
(program 1.1.0 (con integer 0))
--- isolated pass
--- core before
case@Bool false of
  True -> force (delay (trace "selected" in 42))
  False -> 0
--- uplc before
(program 1.1.0
  (case
    (con bool False)
    (con integer 0)
    (force
      (delay
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))])))))
--- core after
case@Bool false of
  True -> trace "selected" in 42
  False -> 0
--- uplc after
(program 1.1.0
  (case
    (con bool False)
    (con integer 0)
    (force
      [[(force (builtin trace)) (con string "selected")] (delay (con integer 42))])))
--- result
(con integer 0)
--- logs
[]
