crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__force_delay__failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/force_delay.rs
assertion_line: 23
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
force (delay (trace "before failure" in error))
--- unoptimized UPLC
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "before failure")] (delay (error))]))))
--- optimized Core
trace "before failure" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "before failure")] (delay (error))]))
    (force (builtin trace))])
--- isolated pass
--- core before
force (delay (trace "before failure" in error))
--- uplc before
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "before failure")] (delay (error))]))))
--- core after
trace "before failure" in error
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before failure")] (delay (error))]))
--- result
error: ExplicitErrorTerm
--- logs
["before failure"]
