crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__force_delay__invalid_force.snap
---
source: crates/nash-codegen/src/optimizer_tests/force_delay.rs
assertion_line: 23
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
force 42
--- unoptimized UPLC
(program 1.1.0 (force (con integer 42)))
--- optimized Core
force 42
--- optimized UPLC
(program 1.1.0 (force (con integer 42)))
--- isolated pass
--- core before
force 42
--- uplc before
(program 1.1.0 (force (con integer 42)))
--- core after
force 42
--- uplc after
(program 1.1.0 (force (con integer 42)))
--- result
error: NonPolymorphicInstantiation(Con(Integer(42)))
--- logs
[]
